--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ Prototype Genesis 2/Assets/EasyEditor.meta
 Prototype Genesis 2/Assets/EasyEditor/Readme.pdf
 Prototype Genesis 2/Assets/EasyEditor/Readme.pdf.meta
 TP2/Library/
+TP2/Temp/Assembly-CSharp.dll
+TP2/Temp/UnityLockfile
+TP2/Temp/
